@@ -1,0 +1,256 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop\u5546\u54c1\u92b7\u552e\u5546\u7f70\u6b3e\u50c5300\u842c\u97d3\u5143\uff01\u8b70\u54e1\u8f5f\uff1a\u592a\u8f15\u4e86\uff0c\u7121\u6cd5\u5236\u6b62\u525d\u524a\u7c89\u7d72", "description": "K-pop\u5546\u54c1\u92b7\u552e\u5546\u7f70\u6b3e\u50c5300\u842c\u97d3\u5143\uff01\u8b70\u54e1\u8f5f\uff1a\u592a\u8f15\u4e86\uff0c\u7121\u6cd5\u5236\u6b62\u525d\u524a\u7c89\u7d72", "url": "https://www.famechos.me/news/K-pop\u5546\u54c1\u92b7\u552e\u5546\u7f70\u6b3e\u50c5300\u842c\u97d3\u5143\uff01\u8b70\u54e1\u8f5f\uff1a\u592a\u8f15\u4e86\uff0c\u7121\u6cd5\u5236\u6b62\u525d\u524a\u7c89\u7d72.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T17:30:58.012321+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop商品銷售商罰款僅300萬韓元！議員轟：太輕了，無法制止剝削粉絲.html"/>
+<meta name="description" content="韓國K-pop商品銷售商遭罰款僅300萬韓元，引發議員批評太輕，無法制止對粉絲的剝削。">
+
+<meta name="keywords" content="K-pop商品銷售商, 罰款, 韓元, 議員, 剝削粉絲, 韓國娛樂圈">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop商品銷售商罰款僅300萬韓元！議員轟：太輕了，無法制止剝削粉絲.html" />
+        <meta property="og:title" content="K-pop商品銷售商罰款僅300萬韓元！議員轟：太輕了，無法制止剝削粉絲" />
+        <meta property="og:description" content="K-pop商品銷售商罰款僅300萬韓元！議員轟：太輕了，無法制止剝削粉絲" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop商品銷售商罰款僅300萬韓元！議員轟：太輕了，無法制止剝削粉絲" />
+        <meta property="twitter:description" content="K-pop商品銷售商罰款僅300萬韓元！議員轟：太輕了，無法制止剝削粉絲" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop商品銷售商罰款僅300萬韓元！議員轟：太輕了，無法制止剝削粉絲</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>國會議員批評，對於K-pop商品銷售商的不公平消費行為，懲罰太輕，不能有效地制止這些行為。</p>
+<p>民主黨議員指出，娛樂巨頭海譜（Hybe）因違反K-pop產品消費者的權益，被罰款僅300萬韓元（約2,200美元），而該公司在三年內通過銷售這些產品賺取了超過1兆韓元的收入，這引發了人們對懲罰有效性的質疑。</p>
+<p>海譜的全球超級粉絲平台Weverse公司的CEO崔俊源在聽證會上接受議員質詢。海譜與其他三家K-pop巨頭YG、SM和JYP一起，被公正交易委員會懲罰，原因是它們限制或拒絕履行合法保證的退款要求，今年被罰款300萬韓元。</p>
+<p>這些公司被發現從事的不公平行為包括：</p>
+<ul>
+<li>拒絕為打開包裝的產品退款</li>
+<li>將有缺陷的產品的退款限制在購買後七天內</li>
+</ul>
+<p>根據當地法律，有缺陷或損壞的產品在三個月內可以全額退款。</p>
+<p>崔俊源表示，在監管機構開始調查此案後，這些行為已經得到糾正。</p>
+<p>議員指出，罰款僅占該公司2021年至2024年上半年商品銷售收入的1.207兆韓元的極小部分。商品銷售占海譜同期總收入6.211兆韓元的19.5%。</p>
+<p>議員呼籲加強對名人商品消費者受到的不公平行為的監管，稱弱懲罰使得公司繼續利用粉絲對K-pop藝人的熱愛。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/D8RZbI1jfQ0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html">KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
