@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 17:27:22 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 17:31:09 +0800</lastBuildDate>
 
   <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
@@ -31,5 +31,11 @@
   <description>&lt;h2&gt;2NE1重返舞台　與Blackjacks一起慶祝15週年&lt;/h2&gt;</description>
   <category>K-Pop</category>
   <pubDate>Fri, 11 Oct 2024 17:27:22 +0800</pubDate>
+</item><item>
+  <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
+  <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html</link>
+  <description>&lt;h2&gt;K-pop商品銷售商的懲罰太輕：議員&lt;/h2&gt;</description>
+  <category>K-Pop</category>
+  <pubDate>Fri, 11 Oct 2024 17:31:09 +0800</pubDate>
 </item></channel>
 </rss>
